labos/tutorial.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tutorial
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tutorial
  template:
    metadata:
      labels:
        app: tutorial
    spec:
      containers:
      - name: front-end
        image: nginx
        ports:
        - containerPort: 80
      - name: rss-reader
        image: nickchase/rss-php-nginx:v1
        ports:
        - containerPort: 88
