labos/ex5.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ex5
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ex5
  template:
    metadata:
      labels:
        app: ex5
    spec:
      containers:
      - name: ex5
        image: gcr.io/google-samples/kubernetes-bootcamp:v1
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: service-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: ex5
  ports:
    - port: &target 80
      name: http
      targetPort: 8080
